org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/ImportAndInnerClassesNamesAreTheSameBadCase2.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="DependencyOuterPackage.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="DependencyOuterPackage.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	import OuterPackage::*;
	class A{
		class a2{}
	}
	class B specializes A {
		// XPECT errors --> "Couldn't resolve reference to Class 'a1'." at "a1"
		class b specializes a1{}
	}
}